--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .btn {
-    cursor: pointer;
-    font-weight: 600;
-    line-height: 1.75;
-    border-width: 0px;
-    text-align: center;
-    font-size: 0.875rem;
-    padding: 0.6rem 1.5rem;
-    width: min(200px, 100%);
-    color: var(--white-color);
-    border-radius: var(--border-radius);
-    background-color: var(--blue-ligth-color-primary);
-  }
-  
-  .btn:hover {
-    background-color: var(--blue-dark-color-primary);
+    overflow: auto;
   }
   
   small {
@@ -42,14 +25,6 @@
   
   form {
     width: 100%;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="password"]:focus {
-    outline: 0px;
-    font-weight: 500;
-    color: var(--gray-dark-color-secondary);
   }
   
   
