--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,96 @@
 :root {
-    --bg-color: rgb(243, 244, 249);
-    --white-color: #fff;
-    --black-color: #000;
-    --border-radius: 8px;
-    --blue-ligth-color-primary: rgb(36, 153, 239);
-    --blue-dark-color-primary: rgb(26, 119, 205);
-    --gray-ligth-color-secondary: rgb(148, 164, 196);
-    --gray-dark-color-secondary: rgb(29, 36, 56);
-    --padding-container: 1.5rem;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html,
-  body {
-    width: 100%;
-    height: 100%;
-  }
-  
-  body {
-    background-color: var(--bg-color);
-    font-family: Montserrat, sans-serif;
-    font-size: 1rem;
-  }
-  
-  #root {
-    height: 100%;
-  }
-  
-  .ellipsis {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
+  --bg-color: rgb(243, 244, 249);
+  --white-color: #fff;
+  --black-color: #000;
+  --border-radius: 8px;
+  --blue-ligth-color-primary: rgb(36, 153, 239);
+  --blue-dark-color-primary: rgb(26, 119, 205);
+  --gray-ligth-color-secondary: rgb(148, 164, 196);
+  --gray-dark-color-secondary: rgb(29, 36, 56);
+  --padding-container: 1.5rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: var(--bg-color);
+  font-family: Montserrat, sans-serif;
+  font-size: 1rem;
+}
+
+#root {
+  height: 100%;
+}
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.btn {
+  cursor: pointer;
+  font-weight: 600;
+  line-height: 1.75;
+  border-width: 0px;
+  text-align: center;
+  font-size: 0.875rem;
+  padding: 0.6rem 1.5rem;
+  color: var(--white-color);
+  width: clamp(200px, 100%, 100%);
+  border-radius: var(--border-radius);
+  background-color: var(--blue-ligth-color-primary);
+}
+
+.btn:hover {
+  background-color: var(--blue-dark-color-primary);
+}
+
+.btn--small {
+  width: 180px;
+}
+
+form .form__group {
+  display: flex;
+  margin-bottom: 16px;
+  flex-direction: column;
+}
+
+form .form__group label {
+  margin-top: 0px;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+
+form .form__group .form__input {
+  width: 100%;
+  text-align: left;
+  padding: 0px 8px;
+  font-weight: 500;
+  height: 3.4375em;
+  border-radius: var(--border-radius);
+  border: 2px solid rgb(229, 234, 242);
+  color: var(--gray-dark-color-secondary);
+}
+
+select,
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="date"],
+input[type="password"]:focus {
+  outline: 0px;
+  font-weight: 500;
+  color: var(--gray-dark-color-secondary);
+}
