--- a/src/App.css
+++ b/src/App.css
@@ -27,23 +27,25 @@
     width: 100%;
   }
   
-  
-  /* TODO */
-  /* Spinner styles */
-  .spinner-container {
+  .bg--fullPageCenter {
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .display--flexColumn{
+    flex-direction: column;
   }
   
+  /* Spinner styles */
   .spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #09f;
-    border-radius: 50%;
     width: 40px;
     height: 40px;
+    border-radius: 50%;
     animation: spin 1s linear infinite;
+    border-left-color: var(--blue-dark-color-primary);
+    border: 4px solid var(--gray-ligth-color-secondary);
   }
   
   @keyframes spin {
