--- a/src/features/bills/components/Form/Form.css
+++ b/src/features/bills/components/Form/Form.css
@@ -2,11 +2,9 @@
   background-color: var(--white-color);
   border: 1px solid rgb(229, 234, 242);
   border-radius: var(--border-radius);
-  padding: 32px;
-  display: flex;
-  flex-wrap: wrap;
   width: calc(100% - 10%);
-  gap: 10px;
+  margin: auto;
+  padding: 2rem;
 }
 
 .bg--while .file__container,
@@ -24,6 +22,10 @@
   border-radius: var(--border-radius);
 }
 
+.bg--while hr {
+  height: 10px;
+}
+
 .bg--while .file__container label div {
   width: 100%;
   height: 400px;
@@ -38,8 +40,9 @@
 
 @media (min-width: 600px) {
   .bg--while {
-    column-gap: 10px;
-    flex-wrap: nowrap;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
   }
   .bg--while .file__container,
   .bg--while .field__container {
