--- a/src/features/bills/components/Table/Table.css
+++ b/src/features/bills/components/Table/Table.css
@@ -1,3 +1,23 @@
+.options__container {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: end;
+  margin-bottom: 1rem;
+}
+
+.options__container .dashboard__input {
+  text-align: left;
+  padding: 0px 8px;
+  font-weight: 500;
+  height: 3.4375em;
+  width: 100%;
+  border-radius: var(--border-radius);
+  border: 2px solid rgb(229, 234, 242);
+  color: var(--gray-dark-color-secondary);
+}
+
 table {
   display: table;
   width: 100%;
@@ -6,53 +26,63 @@ table {
 }
 
 table thead tr {
-    outline: 0px;
-    color: inherit;
-    display: table-row;
-    vertical-align: middle;
+  outline: 0px;
+  color: inherit;
+  display: table-row;
+  vertical-align: middle;
 }
 
 table thead tr th {
-    width: 150px;
-    text-align: left;
-    min-width: 100px;
-    padding: 0px 16px;
-    line-height: 1.5rem;
-    color: var(--gray-dark-color-secondary);
+  width: 150px;
+  text-align: left;
+  min-width: 100px;
+  padding: 0px 16px;
+  line-height: 1.5rem;
+  color: var(--gray-dark-color-secondary);
 }
 
 table tbody tr {
-    background-color: var(--white-color);
+  background-color: var(--white-color);
 }
 
 table tbody tr td {
-    padding: 16px;
-    text-align: left;
-    line-height: 1.43;
-    color: var(--gray-ligth-color-secondary);
+  padding: 16px;
+  text-align: left;
+  line-height: 1.43;
+  color: var(--gray-ligth-color-secondary);
 }
 
 table tbody tr td:first-child {
-    border-top-left-radius: var(--border-radius);
-    border-bottom-left-radius: var(--border-radius);
+  border-top-left-radius: var(--border-radius);
+  border-bottom-left-radius: var(--border-radius);
 }
 
 table tbody tr td:last-child {
-    border-top-right-radius: var(--border-radius);
-    border-bottom-right-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
 }
 
 table tbody tr td .status--column {
-    border-radius: 40px;
-    padding: 0.5rem 1.8rem;
+  border-radius: 40px;
+  padding: 0.5rem 1.8rem;
 }
 
 table tbody tr td .status--pending {
-    background-color: #f39c12;
-    color: white;
-  }
-  
+  background-color: #f39c12;
+  color: white;
+}
+
 table tbody tr td .status--paid {
-    background-color: #27ae60;
-    color: white;
+  background-color: #27ae60;
+  color: white;
+}
+
+@media(min-width: 576px) {
+  .options__container {
+    flex-direction: row;
   }
+
+  .options__container .dashboard__input {
+    width: 250px;
+  }
+}
