--- a/src/features/bills/components/Table/Table.css
+++ b/src/features/bills/components/Table/Table.css
@@ -18,21 +18,25 @@
   color: var(--gray-dark-color-secondary);
 }
 
-table {
+.table {
+  overflow: scroll;
+}
+
+.table table {
   display: table;
   width: 100%;
   border-spacing: 0px 1rem;
   border-collapse: separate;
 }
 
-table thead tr {
+.table table thead tr {
   outline: 0px;
   color: inherit;
   display: table-row;
   vertical-align: middle;
 }
 
-table thead tr th {
+.table table thead tr th {
   width: 150px;
   text-align: left;
   min-width: 100px;
@@ -41,38 +45,38 @@ table thead tr th {
   color: var(--gray-dark-color-secondary);
 }
 
-table tbody tr {
+.table table tbody tr {
   background-color: var(--white-color);
 }
 
-table tbody tr td {
+.table table tbody tr td {
   padding: 16px;
   text-align: left;
   line-height: 1.43;
   color: var(--gray-ligth-color-secondary);
 }
 
-table tbody tr td:first-child {
+.table table tbody tr td:first-child {
   border-top-left-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
 }
 
-table tbody tr td:last-child {
+.table table tbody tr td:last-child {
   border-top-right-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
 }
 
-table tbody tr td .status--column {
+.table table tbody tr td .status--column {
   border-radius: 40px;
   padding: 0.5rem 1.8rem;
 }
 
-table tbody tr td .status--pending {
+.table table tbody tr td .status--pending {
   background-color: #f39c12;
   color: white;
 }
 
-table tbody tr td .status--paid {
+.table table tbody tr td .status--paid {
   background-color: #27ae60;
   color: white;
 }
